# pcmanager-smibios

./: CMakeLists.txt  README.md  vcpkg.json
